--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/exports/*.npy filter=lfs diff=lfs merge=lfs -text
 data/exports/X_train.npy filter=lfs diff=lfs merge=lfs -text
+docs/proyecto_ml_agc.pptx filter=lfs diff=lfs merge=lfs -text
